# simGCS

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: QFlightMode.hpp  QMacros.hpp  TelemetrySimulator.hpp
qml/: M_Button.qml  M_Map.qml  M_Rect.qml  M_Shadow.qml  M_Text.qml  main.qml  qml.qrc
src/: TelemetrySimulator.cpp  main.cpp
test/: TelemetrySimulatorTests.cpp
